# knowledge_one

./: .gitignore  README.md  build_on_windows.bat  generate.bat  knowledge_one.sql  pubspec.yaml  sqlite.sql
android/app/: build.gradle
changelogs/: 0_0_1.md  0_0_2.md  0_0_3.md  0_0_4.md  0_0_5.md
dumps/: todo_controller.dart  todo_item_details.dart  todo_screen.dart
ios/Flutter/: Generated.xcconfig  flutter_export_environment.sh
ios/Runner/: GeneratedPluginRegistrant.m  Info.plist  (+1 more)
ios/Runner.xcodeproj/: project.pbxproj
lib/: app_style.dart  bridge_definitions.dart  bridge_generated.dart  constants.dart  main.dart  native.dart  routers.dart  rpc_controller.dart
linux/: CMakeLists.txt  my_application.cc  rust.cmake
native/: .gitignore  Cargo.toml  app_config.yaml  build.rs  db_config.toml
native/src/: api.rs  bridge_generated.io.rs  bridge_generated.rs  bridge_generated.web.rs  constants.rs  lib.rs
native/src/database/: connection.rs  engine.rs  load_config.rs  mod.rs  sqlx_connection.rs
native/src/database/model/: changelog.rs  file.rs  mod.rs  operation_log.rs  task.rs  todo.rs  todo_status.rs
native/src/file_changelog/: changelog.rs  diff.rs  file_io.rs  mod.rs
native/src/native_sysinfo/: mod.rs
native/src/storage/: create_file.rs  create_folder.rs  file_hash.rs  file_size.rs  mod.rs
native/src/svg/: mod.rs
rpc/: .gitignore  file_diff.proto  file_restore.proto  proto_generate.bat
rpc_dev_tool/: go.mod  go.sum  greeter_pb2.py  greeter_pb2_grpc.py  main.go  server.py
rpc_js/: build.bat  client.js  generate.bat  package-lock.json  package.json  proto.js  quicktype.proto  quicktype_call.js  quicktype_test.js  server.js
rpc_python/: faker.proto  faker_proto_generate.bat  server.py  test_profile.py
some_ui/: README.md  pubspec.yaml
test/: json_to_dart_test.dart  json_viewer.dart  redis_format.dart  redis_info_test.dart  rpc_test.dart  rpc_test_2.dart  set_test.dart  widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+193 files in other folders)
