[package]
name = "native"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["lib","staticlib","cdylib",]

[dependencies]
flutter_rust_bridge = "1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
mysql = "22.2.0"
lazy_static = "*"
toml = "*"
ring = "0.16.20"
data-encoding = "2.3.2"

[build-dependencies]
flutter_rust_bridge_codegen = "1"
