[package]
name = "native"
version = "0.0.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["lib","staticlib","cdylib",]

[dependencies]
flutter_rust_bridge = "1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
lazy_static = "*"
toml = "*"
ring = "0.16.20"
data-encoding = "2.3.2"
anyhow = "1.0"
futures = "0.3"
sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls" ,"sqlite" ,"mysql","chrono" ] }
structopt = "0.3"
tokio = { version = "1", features = ["full"] }
svgcleaner = "0.9.5"  # svg清理

[build-dependencies]
flutter_rust_bridge_codegen = "1"
